# newt-lang

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  mise.toml
docs/superpowers/plans/: 2026-07-05-dbg-macro-v2.md  2026-07-05-dbg-macro.md  2026-07-05-unresolved-type-warnings.md  2026-07-06-dbg-stacktrace-trace-reports.md
docs/superpowers/specs/: 2026-07-05-dbg-macro-design.md  2026-07-05-dbg-macro-v2-watchpoints-design.md  2026-07-05-unresolved-type-warnings-design.md  2026-07-06-dbg-stacktrace-trace-reports-design.md
examples/: lib.nt  match-ts.nt  match-ts.ts  scratch.nt  ts-toolbelt.nt
examples/ts-toolbelt/: Test.nt
examples/ts-toolbelt/Any/: At.nt  Await.nt  Cast.nt  Compute.nt  Contains.nt  Equals.nt  Extends.nt  If.nt  Is.nt  Key.nt  Keys.nt  KnownKeys.nt  x.nt  (+4 more)
newtype-macros/: Cargo.toml
scripts/: conformance.py
src/: ast.rs  corpus.rs  lib.rs  main.rs  module_loader.rs  panic_report.rs  parser.rs  report.rs  runtime.rs  test_codegen.rs  test_harness.rs  test_support.rs  typescript.rs  validation_error.rs
src/ast/: assignability.rs  dbg_expr.rs  desugar.rs  if_expr.rs  let_expr.rs  pretty.rs  type_env.rs  unresolved.rs  validate.rs  walk.rs
src/parser/: lexer.rs
tests/: ast.rs  cli.rs  dbg_eval.rs  imports.rs  parser.rs  pending.rs
tests/common/: mod.rs
tests/conformance/: conditionals.nt  conditionals_extra.nt  discriminated_unions.nt  exotic_extra.nt  functions_extra.nt  generics.nt  generics_extra.nt  indexed_access.nt  keyof.nt  literals_extra.nt  mapped_extra.nt  mapped_keyof_index.nt  objects_extra.nt  primitives_extra.nt  tuples_extra.nt
(+597 files in other folders)
