[package]
name = "newtype"
version = "0.1.0"
edition = "2021"

[features]
default = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env", "wrap_help"] }
itertools = "0.13.0"
lexpr = "0.2.7"
pretty = { version = "0.12.1", features = ["termcolor"] }
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"
rstest = "0.21.0"
serde = { version = "1.0.204", features = ["derive", "rc", "serde_derive"] }
serde-lexpr = "0.1.3"
serde_derive = "1.0.204"
textwrap-macros = "0.3.0"
newtype-macros = { path = "newtype-macros" }
derivative = "2.2.0"
slotmap = "1.1.1"
srcmap-generator = "0.3.9"
chumsky = { version = "0.13", features = ["pratt"] }
ariadne = { version = "0.6", features = ["concolor"] }
concolor = { version = "0.1.1", features = ["auto"] }
thiserror = "2.0.18"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
insta = "1"
rstest = "0.21.0"
pretty_assertions = "1.3.0"
serde-lexpr = "0.1.3"
textwrap-macros = "0.3.0"
